k8s/apps/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  ports:
  - name: web
    port: 80
    targetPort: 4533
    protocol: TCP
